# opens3-rebac

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GETTING_STARTED.md  Makefile  README.md  docker-compose.yml  go.work  go.work.sum
.github/workflows/: auth-ci.yml  authz-ci.yml  metadata-ci.yml  quota-ci.yml  storage-ci.yml  test.yml  users-ci.yml
docs/: auth-users-integration.md  class_diagram.md  distributed-storage-architecture.md  kubernetes-deployment-plan.md  object_diagram.md  phase2-fix-plan.md  sequence_diagrams.md  storage-fs-architecture.md  storage-service-implementation-plan.md  users-service-unit-test-plan.md  wiki-audit-2026-04-02.md
infra/kafka/: .env  Makefile
infra/otel/: .env  Makefile  otel-collector-config.yaml  prometheus.yml
plans/: gateway-fixes-plan.md
proto/authz/v1/: authz.proto
proto/metadata/v1/: metadata.proto
proto/storage/v1/: storage.proto
services/auth/: .env  Dockerfile  Makefile  README.md  go.mod  go.sum  service.pem
services/authz/: .dockerignore  .env  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
services/authz/deploy/local/: docker-compose.yml
services/authz/entrypoints/: __init__.py  cache_invalidator.py
services/authz/entrypoints/server/: main.py  servicer.py
services/authz/internal/: config.py  container.py  types.py
services/authz/internal/cache/: interfaces.py  invalidation_consumer.py  redis_cache.py
services/authz/internal/kafka/: producer.py
services/authz/internal/metric/: __init__.py  authz_metrics.py
services/authz/internal/neo4j/: store.py
services/authz/internal/permission/: interfaces.py  service.py
services/authz/internal/rebac/: interfaces.py  model.py
services/authz/internal/repositories/cache/: interfaces.py  invalidation_consumer.py  redis_cache.py
services/authz/internal/repositories/kafka/: producer.py
services/authz/internal/repositories/neo4j/: schema.py  store.py
services/authz/issues/: proto_package_sync.md
services/authz/proto/: authz.proto  generate.sh
services/authz/tests/: __init__.py  conftest.py
services/authz/tests/integration/: __init__.py  conftest.py  test_neo4j_store.py
services/authz/tests/unit/: test_permission_service.py
services/gateway/: .env  Dockerfile  Dockerfile.mock-metadata  go.mod
services/metadata/: .env  Dockerfile  go.mod  go.sum
services/metadata/migrations/: 20260423000000_init.sql
services/quota/: .env  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs
services/quota/src/: app.rs  config.rs  lib.rs  main.rs  metrics.rs
services/quota/src/cache/: memory.rs
services/quota/src/domain/: error.rs  mod.rs  quota.rs
services/quota/src/repository/: mod.rs  redis.rs  traits.rs
services/quota/src/service/: mod.rs  quota.rs
services/quota/src/transport/: grpc.rs
services/quota/tests/: grpc.rs  redis.rs
services/storage/: .env  Dockerfile  Makefile  README.md  go.mod  go.sum  tests.md
services/users/: .env  .gitignore  Dockerfile  Makefile  README.md  ca.cert  certificate.conf  go.mod  go.sum  migration.sh  migrator.Dockerfile
services/users/migrations/: 20250419122242_init_migration.sql  (+5 more)
shared/: go.mod  go.sum
shared/pkg/rust-kit/: Cargo.toml
shared/pkg/rust-kit/src/: lib.rs
shared/pkg/rust-kit/src/middleware/: grpc.rs
shared/pkg/rust-kit/src/telemetry/: closer.rs  logger.rs  metrics.rs  mod.rs  tracer.rs
(+402 files in other folders)
